--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/fortify": "^1.20",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.11",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
         "spatie/laravel-collection-macros": "^7.13"
@@ -18,6 +19,7 @@
         "fakerphp/faker": "^1.9.1",
         "larastan/larastan": "^2.0",
         "laravel-lang/common": "^6.1",
+        "laravel/breeze": "^1.28",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
