--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
+APP_PORT=9000
+VITE_PORT=9173
+
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
-FRONTEND_URL=http://localhost:3000
+APP_URL=http://localhost:9000
+FRONTEND_URL=http://localhost:9173
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
