--- a/package.json
+++ b/package.json
@@ -23,23 +23,33 @@
     "@vueuse/integrations": "^10.7.0",
     "@vueuse/router": "^10.7.0",
     "axios": "^1.6.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
+    "lucide-vue-next": "^0.321.0",
     "pinia": "^2.1.7",
+    "radix-vue": "^1.3.2",
     "tailwind-merge": "2.1",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^5.0.8",
     "vue": "^3.3.11",
     "vue-i18n": "^9.8.0",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "@tailwindcss/forms": "^0.5.7",
     "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.11.16",
     "@vue/test-utils": "^2.4.3",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.21.1",
     "flush-promises": "^1.0.2",
     "jsdom": "^23.0.1",
     "postcss": "^8.4.32",
