--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ VITE_PORT=9173
 
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:F5ms6Xrz2rWNXoqEliL3w7wImjQxtST77+Gxmxh6IEM=
 APP_DEBUG=true
-APP_URL=http://localhost:9000
+APP_URL=http://localhost
 FRONTEND_URL=http://localhost:9173
 
 LOG_CHANNEL=stack
@@ -13,11 +13,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=j_api_spa_boilerplate
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=example_app
+DB_USERNAME=sail
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
