--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jm-sky/j-api-spa-boilerplate",
+    "name": "devmadeit/j-api-spa-boilerplate",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
     "keywords": ["laravel", "framework"],
@@ -29,7 +29,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/",
+            "DevMadeIt\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "DevMadeIt\\Boiler\\": "packages/devmadeit/boiler/src/"
