--- a/packages/devmadeit/boiler/composer.json
+++ b/packages/devmadeit/boiler/composer.json
@@ -5,15 +5,17 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^4.0",
         "illuminate/support": "^11.0@dev",
-        "illuminate/console": "^11.0@dev"
+        "illuminate/console": "^11.0@dev",
+        "spatie/laravel-package-tools": "dev-main"
     },
     "require-dev": {
         "larastan/larastan": "^2.0"
     },
     "autoload": {
         "psr-4": {
-            "Devmadeit\\Boiler\\": "src/"
+            "DevMadeIt\\Boiler\\": "src/"
         }
     },
     "authors": [
@@ -22,5 +24,11 @@
             "email": "jan.madeyski@gmail.com"
         }
     ],
+    "extra": {
+        "laravel": {
+            "providers": [
+            ]
+        }
+    },
     "minimum-stability": "dev"
 }
